--- a/app/views/recipes/edit.html.haml
+++ b/app/views/recipes/edit.html.haml
@@ -1,5 +1,4 @@
-%h1 Editing Recipe
+.page-header
+  %h1 Editing Recipe
 
 = render 'form'
-= link_to 'Show', @recipe
-= link_to 'Back', recipes_path
