--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -4,6 +4,8 @@
       = f.error_notification
       
       = f.input :name
+      = f.input :preparation_time
+      = f.input :cost
       = f.input :preparation
       
       .form-actions
