--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,6 +21,11 @@
         .navbar-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav
             %li= link_to 'Recipes', recipes_path
+            - if user_signed_in?
+              %li= link_to 'Logout', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' }
+            - else
+              %li= link_to 'Login', new_user_session_path
+              %li= link_to 'Sign Up', new_user_registration_path
 
     .container
       .row
