--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,12 +18,12 @@
           %span.icon-bar
           %span.icon-bar
         = link_to app_name, root_path, class: 'navbar-brand'
-        = link_to 'Recipes', recipes_path, class: 'navbar-brand'
+        = link_to 'Recipes', recipes_path, class: 'navbar-brand' if user_signed_in?
         .navbar-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav.navbar-right
             - if user_signed_in?
-              %li.navbar-text Welcome #{current_user.email}
-              %li= link_to 'Update Detail', edit_user_registration_path
+              %li.navbar-text Welcome #{current_user.given_name} #{current_user.last_name}
+              %li= link_to 'Edit Profile', edit_user_registration_path
               %li= link_to 'Logout', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' }
             - else
               %li= link_to 'Login', new_user_session_path
