--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,8 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        = link_to app_name, root_path, class: 'navbar-brand'
+        = link_to root_path, class: 'navbar-brand' do
+          = image_tag('logo.png', class: 'img-responsive', width:'80px')
         = link_to 'Recipes', recipes_path, class: 'navbar-brand' if user_signed_in?
         .navbar-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav.navbar-right
@@ -37,6 +38,9 @@
               %strong= value
           = yield
       %footer
-        %p.text-center &copy; #{app_name} #{Date.today.year}
-
+        %br
+        %h4.text-center
+          = image_tag('logo.png', class: 'img-responsive center-block', width:'200px')
+          .glyphicon.glyphicon-copyright-mark 
+          #{app_name} #{Date.today.year}
   = javascript_include_tag 'application'
