--- a/app/views/recipes/index.html.haml
+++ b/app/views/recipes/index.html.haml
@@ -1,7 +1,7 @@
 .page-header
-  %h1 Recipes
+  %h1.text-uppercase Recipes
 
-%table.table.table-striped
+%table.table.table-condensed.table-responsive
   %thead
     %tr
       %th Name
@@ -20,4 +20,7 @@
           = link_to 'Edit', edit_recipe_path(recipe), class: 'btn btn-sm btn-primary'
           = link_to 'Destroy', recipe, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger'
 %br
-= link_to 'New Recipe', new_recipe_path, class: 'btn btn-primary'
+%br
+.row
+  .col-md-4.col-md-offset-4
+    = link_to 'New Recipe', new_recipe_path, class: 'btn btn-primary btn-block btn-lg'
