--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,7 @@
   <div class="form-inputs">
     <%= f.input :given_name, required: true, autofocus: true %>
     <%= f.input :last_name, required: true %>
-    <%= f.input :brith_date, required: true %>
+    <%= f.input :birth_date, required: true %>
     <%= f.input :email, required: true %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
