--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
   <div class="form-inputs">
     <%= f.input :given_name, required: true, autofocus: true %>
     <%= f.input :last_name, required: true %>
-    <%= f.input :brith_date, required: true %>
+    <%= f.input :birth_date, required: true %>
     <%= f.input :email, required: true %>
     <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
     <%= f.input :password_confirmation, required: true %>
