--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -1,12 +1,12 @@
 .row
-  .col-md-4.col-md-offset-4
+  .col-md-4.col-md-offset-4.extramargin
     = simple_form_for @recipe do |f|
       = f.error_notification
       
       = f.input :name
       = f.input :preparation_time
       = f.input :cost
-      = f.input :preparation
+      = f.input :preparation, as: :text
 
       .form-actions.text-center
         %br
