--- a/app/views/recipes/index.html.haml
+++ b/app/views/recipes/index.html.haml
@@ -1,26 +1,20 @@
 .page-header
-  %h1.text-uppercase Recipes
+  %h1.text-uppercase.text-center My Recipes
 
-%table.table.table-condensed.table-responsive
-  %thead
+%table.table.table-striped
+  %tr
+    %th Name
+    %th Preparation
+    %th Cost
+    %th Time Taken
+    %th 
+  - @recipes.each do |recipe|
     %tr
-      %th Name
-      %th Preparation
-      %th Time
-      %th Cost
-      %th
-  %tbody
-    - @recipes.each do |recipe|
-      %tr
-        %td= link_to recipe.name, recipe
-        %td= recipe.preparation
-        %td= recipe.preparation_time
-        %td= number_to_currency recipe.cost
-        %td.text-right
-          = link_to 'Edit', edit_recipe_path(recipe), class: 'btn btn-sm btn-primary'
-          = link_to 'Destroy', recipe, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger'
-%br
-%br
-.row
-  .col-md-4.col-md-offset-4
-    = link_to 'New Recipe', new_recipe_path, class: 'btn btn-primary btn-block btn-lg'
+      %td #{recipe.name}
+      %td 
+        = link_to truncate(recipe.preparation,length: 100), recipe
+      %td #{number_to_currency recipe.cost}
+      %td #{recipe.preparation_time}
+      %td 
+        = link_to 'Edit', edit_recipe_path(recipe), class: 'btn btn-sm btn-primary'
+        = link_to 'Destroy', recipe, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' 
