--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -2,7 +2,7 @@
   %h1.text-uppercase.text-center Recipes Details
 
 .row
-  .col-md-4.col-md-offset-4
+  .col-md-4.col-md-offset-4.extramargin
     %p
       %strong Name: 
       #{@recipe.name}  
