--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,7 +8,7 @@
     <%= f.input :last_name, required: true %>
     <%= f.input :birth_date, required: true %>
     <%= f.input :email, required: true %>
-
+    <%= f.input :avatar %>
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
