--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,7 @@
     <%= f.input :last_name, required: true %>
     <%= f.input :birth_date, required: true %>
     <%= f.input :email, required: true %>
+    <%= f.input :avatar %>
     <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
     <%= f.input :password_confirmation, required: true %>
   </div>
