--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -3,15 +3,15 @@
   .form-inputs
     = f.input :given_name, required: true, autofocus: true
     = f.input :last_name, required: true
-    = f.input :brith_date, required: true
+    = f.input :birth_date, required: true
     = f.input :email, required: true
 
     - if devise_mapping.confirmable? && resource.pending_reconfirmation?
       %p Currently waiting confirmation for: #{resource.unconfirmed_email}
 
-    = f.input :password, autocomplete: "off", hint: 'leave it blank if you don't want to change it', required: false
+    = f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false
     = f.input :password_confirmation, required: false
-    = f.input :current_password, hint: 'we need your current password to confirm your changes', required: true
+    = f.input :current_password, hint: "we need your current password to confirm your changes", required: true
 
   .form-actions
     = f.button :submit, 'Update'
