--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -5,7 +5,7 @@
   .form-inputs
     = f.input :given_name, label: 'First Name', required: true, autofocus: true
     = f.input :last_name, label: 'Last Name', required: true
-    = f.input :brith_date, label: 'Date of Birth', required: true
+    = f.input :birth_date, label: 'Date of Birth', required: true
     = f.input :email, label: 'Email', required: true
     = f.input :password, label: 'Password', required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable)
     = f.input :password_confirmation, label: 'Confirm Password', required: true
