--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,10 @@
   margin: 90px 0px 30px;
 }
 
+.header {
+  margin: 90px 0px 30px;
+}
+
 .alert {
   margin: 60px 0px -70px;
 }
@@ -30,16 +34,13 @@
 .container-box {
   width:300px; 
   height:380px; 
-  padding:15px 0px; 
+  padding:15px 10px; 
   background-color:#fafafa;
   -webkit-box-shadow:0 0 3px #6b696b;
   -moz-box-shadow:0 0 3px #6b696b;
   box-shadow:0 0 3px #6b696b;
 }
 
-body {
-  font-family:calibri;
-}
 
 h1{
   font-weight:bold;
