--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -1,4 +1,5 @@
-%h2 Resend confirmation instructions
+.page-header
+  %h2.text-uppercase.text-center Resend confirmation instructions
 = simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
   = f.full_error :confirmation_token
 
@@ -7,5 +8,4 @@
 
   .form-actions
     = f.button :submit, 'Resend confirmation instructions'
-
 = render 'devise/shared/links'
