--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,4 +1,5 @@
-%h2 Change your password
+.page-header
+  %h2.text-uppercase.text-center Change your password
 = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
 
   = f.input :reset_password_token, as: :hidden
