--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,11 +1,11 @@
-%h2 Forgot your password?
+.page-header
+  %h3.text-uppercase Forgot your password?
+.col-md-4
+  = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+    .form-inputs
+      = f.input :email, required: true, autofocus: true
 
-= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+    .form-actions
+      = f.button :submit, 'Send me reset password instructions'
 
-  .form-inputs
-    = f.input :email, required: true, autofocus: true
-
-  .form-actions
-    = f.button :submit, 'Send me reset password instructions'
-
-= render 'devise/shared/links'
+  = render 'devise/shared/links'
