--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,24 +1,24 @@
-%h2 Edit Profile #{resource_name.to_s.humanize}
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  .form-inputs
-    = f.input :given_name, required: true, autofocus: true
-    = f.input :last_name, required: true
-    = f.input :birth_date, required: true
-    = f.input :email, required: true
+.page-header
+  %h2.text-uppercase.text-center  Edit #{resource_name.to_s.humanize} Profile 
+.col-md-4.col-md-offset-4
+  = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+    .form-inputs
+      = f.input :given_name, required: true, autofocus: true
+      = f.input :last_name, required: true
+      = f.input :birth_date, required: true
+      = f.input :email, required: true
+      = f.input :avatar
 
-    - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-      %p Currently waiting confirmation for: #{resource.unconfirmed_email}
+      - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+        %p Currently waiting confirmation for: #{resource.unconfirmed_email}
 
-    = f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false
-    = f.input :password_confirmation, required: false
-    = f.input :current_password, hint: "we need your current password to confirm your changes", required: true
+      = f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false
+      = f.input :password_confirmation, required: false
+      = f.input :current_password, hint: "Please enter current password to confirm your changes", required: true
 
-  .form-actions
-    = f.button :submit, 'Update'
-
-%h3 Cancel my account
-%p
-  Are you Unhappy?
-  = link_to 'Cancel my account', registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
-
-= link_to 'Back', :back
+    .form-actions.text-center
+      = f.button :submit, 'Update'
+      = link_to 'Back', :back, class: 'btn btn-default'
+  %p.text-center.extramargin
+    Are you Unhappy? 
+    = link_to 'Cancel my account', registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
